--- a/dashboard_abitmedia/index2.html
+++ b/dashboard_abitmedia/index2.html
@@ -32,21 +32,21 @@
                         <thead>
                         <tr class="indigo darken-4">
                             <th class="white--text">ID</th>
+                            <th class="white--text">SDKU</th>
                             <th class="white--text">DESCRIPCIÓN</th>
                             <th class="white--text">PRECIO</th>
-                            <th class="white--text">STOCK</th>
                             <th class="white--text text-center">ACCIONES</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr v-for="software in softwares" :key="software.id">
-                            <td>{{ software.id }}</td>
-                            <td>{{ software.descripcion }}</td>
-                            <td>{{ software.precio }}</td>
-                            <td>{{ software.stock }}</td>
+                        <tr v-for="service in services" :key="service.id">
+                            <td>{{ service.id }}</td>
+                            <td>{{ service.sdku }}</td>
+                            <td>{{ service.descripcion }}</td>
+                            <td>{{ service.precio }}</td>
                             <td>
-                                <v-btn fab dark color="#00BCD4" small @click="formEditar(software.id, software.descripcion, software.precio, software.stock)"><v-icon>mdi-pencil</v-icon></v-btn>
-                                <v-btn fab dark color="#E53935" small @click="borrar(software.id)"><v-icon>mdi-delete</v-icon></v-btn>
+                                <v-btn fab dark color="#00BCD4" small @click="formEditar(service.id, service.descripcion, service.precio)"><v-icon>mdi-pencil</v-icon></v-btn>
+                                <v-btn fab dark color="#E53935" small @click="borrar(service.id)"><v-icon>mdi-delete</v-icon></v-btn>
                             </td>
                         </tr>
                         </tbody>
@@ -56,20 +56,17 @@
             <!-- Componente de Diálogo para CREAR y EDITAR -->
             <v-dialog v-model="dialog" max-width="500">
                 <v-card>
-                    <v-card-title class="blue darken-2 white--text">Artículo</v-card-title>
+                    <v-card-title class="blue darken-2 white--text">Services</v-card-title>
                     <v-card-text>
                         <v-form>
                             <v-container>
                                 <v-row>
-                                    <input v-model="software.id" hidden></input>
+                                    <input v-model="service.id" hidden></input>
                                     <v-col cols="12" md="4">
-                                        <v-text-field v-model="software.descripcion" label="Descripción" solo required>{{software.descripcion}}</v-text-field>
+                                        <v-text-field v-model="service.descripcion" label="Descripción" solo required>{{service.descripcion}}</v-text-field>
                                     </v-col>
                                     <v-col cols="12" md="4">
-                                        <v-text-field v-model="software.precio" label="Precio" type="number" prefix="$" solo required></v-text-field>
-                                    </v-col>
-                                    <v-col cols="12" md="4">
-                                        <v-text-field v-model="software.stock" label="Stock" type="number" solo required></v-text-field>
+                                        <v-text-field v-model="service.precio" label="Precio" type="number" prefix="$" solo required></v-text-field>
                                     </v-col>
                                 </v-row>
                             </v-container>
@@ -93,21 +90,20 @@
 
 <script>
 
-    let url = 'http://127.0.0.1:8000/api/softwares/';
+    let url = 'http://127.0.0.1:8000/api/services/';
 
     new Vue({
         el: '#app',
         vuetify: new Vuetify(),
         data() {
             return {
-                softwares: [],
+                services: [],
                 dialog: false,
                 operacion: '',
-                software:{
+                service:{
                     id: null,
                     descripcion:'',
-                    precio:'',
-                    stock:''
+                    precio:''
                 }
             }
         },
@@ -119,23 +115,22 @@
             mostrar:function(){
                 axios.get(url)
                     .then(response =>{
-                        this.softwares = response.data;
+                        this.services = response.data;
                     })
             },
             crear:function(){
-                let parametros = {descripcion:this.software.descripcion, precio:this.software.precio,stock:this.software.stock };
+                let parametros = {descripcion:this.service.descripcion, precio:this.service.precio };
                 axios.post(url, parametros)
                     .then(response =>{
                         this.mostrar();
                     });
-                this.software.descripcion="";
-                this.software.precio="";
-                this.software.stock="";
+                this.service.descripcion="";
+                this.service.precio="";
             },
             editar: function(){
-                let parametros = {descripcion:this.software.descripcion, precio:this.software.precio, stock:this.software.stock, id:this.software.id};
+                let parametros = {descripcion:this.service.descripcion, precio:this.service.precio, id:this.service.id};
                 //console.log(parametros);
-                axios.put(url+this.software.id, parametros)
+                axios.put(url+this.service.id, parametros)
                     .then(response => {
                         this.mostrar();
                     })
@@ -174,16 +169,14 @@
             formNuevo:function () {
                 this.dialog=true;
                 this.operacion='crear';
-                this.software.descripcion='';
-                this.software.precio='';
-                this.software.stock='';
+                this.service.descripcion='';
+                this.service.precio='';
             },
-            formEditar:function(id, descripcion, precio, stock){
+            formEditar:function(id, descripcion, precio){
                 //capturamos los datos del registro seleccionado y los mostramos en el formulario
-                this.software.id = id;
-                this.software.descripcion = descripcion;
-                this.software.precio = precio;
-                this.software.stock = stock;
+                this.service.id = id;
+                this.service.descripcion = descripcion;
+                this.service.precio = precio;
                 this.dialog=true;
                 this.operacion='editar';
             }
