feat:finish project

--- a/dashboard_abitmedia/index.html
+++ b/dashboard_abitmedia/index.html
@@ -119,14 +119,14 @@
         methods:{
             //MÉTODOS PARA EL CRUD
             mostrar:function(){
-                axios.get(url)
+                axios.get(url, { headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response =>{
                         this.softwares = response.data;
                     })
             },
             crear:function(){
                 let parametros = {descripcion:this.software.descripcion, precio:this.software.precio,stock:this.software.stock };
-                axios.post(url, parametros)
+                axios.post(url, parametros, { headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response =>{
                         this.mostrar();
                     });
@@ -137,7 +137,7 @@
             editar: function(){
                 let parametros = {descripcion:this.software.descripcion, precio:this.software.precio, stock:this.software.stock, id:this.software.id};
                 //console.log(parametros);
-                axios.put(url+this.software.id, parametros)
+                axios.put(url+this.software.id, parametros, { headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response => {
                         this.mostrar();
                     })
@@ -153,7 +153,7 @@
                 }).then((result) => {
                     if (result.isConfirmed) {
                         //procedimiento borrar
-                        axios.delete(url+id)
+                        axios.delete(url+id, { headers: { x_api_key: 'ABCDEF123456' } })
                             .then(response =>{
                                 this.mostrar();
                             });
