--- a/dashboard_abitmedia/index3.html
+++ b/dashboard_abitmedia/index3.html
@@ -107,14 +107,14 @@
         methods:{
             //MÉTODOS PARA EL CRUD
             mostrar:function(){
-                axios.get(url)
+                axios.get(url ,{ headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response =>{
                         this.licences = response.data;
                     })
             },
             crear:function(){
                 let parametros = {id_software:this.licence.id_software };
-                axios.post(url, parametros)
+                axios.post(url, parametros, { headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response =>{
                         this.mostrar();
                     });
@@ -123,7 +123,7 @@
             editar: function(){
                 let parametros = {id_software:this.licence.id_software, id:this.licence.id};
                 //console.log(parametros);
-                axios.put(url+this.licence.id, parametros)
+                axios.put(url+this.licence.id, parametros, { headers: { x_api_key: 'ABCDEF123456' } })
                     .then(response => {
                         this.mostrar();
                     })
@@ -139,7 +139,7 @@
                 }).then((result) => {
                     if (result.isConfirmed) {
                         //procedimiento borrar
-                        axios.delete(url+id)
+                        axios.delete(url+id, { headers: { x_api_key: 'ABCDEF123456' } })
                             .then(response =>{
                                 this.mostrar();
                             });
