feat:finish project

--- a/dashboard_abitmedia/index.html
+++ b/dashboard_abitmedia/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
     <style>
         #app{
-            background-color:#CFD8DC;
+            background-color:#cfdcd4;
         }
     </style>
 </head>
@@ -18,6 +18,7 @@
 <div id="app">
     <v-app>
         <v-main>
+            <h1>Gestion de Softwares</h1>
             <!--<h2 class="text-center">CRUD usando APIREST con Node JS</h2>-->
             <!-- Botón CREAR -->
             <v-flex class="text-center align-center">
